--- a/Broadcaster/src/main/res/layout/activity_player.xml
+++ b/Broadcaster/src/main/res/layout/activity_player.xml
@@ -6,13 +6,72 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="sandbox.murinrad.org.sandbox.Player">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <MediaController
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/mediaController"
-        android:layout_alignParentBottom="true" />
+        android:id="@+id/playButton"
+        android:src="@android:drawable/ic_media_play"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/previousBTN"
+        android:src="@android:drawable/ic_media_previous"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/playButton"
+        android:layout_toStartOf="@+id/playButton" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/nextBTN"
+        android:src="@android:drawable/ic_media_next"
+        android:layout_alignTop="@+id/playButton"
+        android:layout_toRightOf="@+id/playButton"
+        android:layout_toEndOf="@+id/playButton" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/songName"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="duration"
+        android:id="@+id/duration"
+        android:layout_below="@+id/nextBTN"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/close_service"
+        android:id="@+id/closeButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/duration"
+        android:layout_alignEnd="@+id/duration"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select song"
+        android:id="@+id/selectSong"
+        android:layout_above="@+id/closeButton"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
