--- a/Broadcaster/src/main/res/layout/activity_player.xml
+++ b/Broadcaster/src/main/res/layout/activity_player.xml
@@ -1,13 +1,32 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sandbox.murinrad.org.sandbox.Player">
+    android:layout_height="match_parent"
+    tools:context="sandbox.murinrad.org.sandbox.Player"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="fill_parent"
+        android:layout_height="?actionBarSize"
+        android:minHeight="?android:attr/actionBarSize"
+        android:title="Music Multiply"
+        android:background="@android:color/holo_blue_dark"
+        android:logo="@drawable/ic_launcher"
+        android:id="@+id/toolbar"
+        >
+
+    </android.support.v7.widget.Toolbar>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        >
 
 
-    <ImageButton
+        <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/playButton"
@@ -15,7 +34,7 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
-    <ImageButton
+        <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/previousBTN"
@@ -24,16 +43,17 @@
         android:layout_toLeftOf="@+id/playButton"
         android:layout_toStartOf="@+id/playButton" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/nextBTN"
-        android:src="@android:drawable/ic_media_next"
-        android:layout_alignTop="@+id/playButton"
-        android:layout_toRightOf="@+id/playButton"
-        android:layout_toEndOf="@+id/playButton" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nextBTN"
+            android:layout_centerVertical="true"
+            android:src="@android:drawable/ic_media_next"
+            android:layout_alignTop="@+id/playButton"
+            android:layout_toEndOf="@+id/playButton"
+            android:layout_toRightOf="@+id/playButton" />
 
-    <TextView
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -74,4 +94,5 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
